@@ -158,6 +158,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
         recruit="Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Archer,Orcish Assassin,Saurian Skirmisher,Naga Fighter"
         gold=40
         income=10
+        team_name="2"
         [unit]
             x,y=12,13
             type="Orcish Archer"
@@ -172,7 +173,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
     [side]
         side=3
         controller=ai
-        team_name="1"
+        team_name="1,2"
         type="Gryphon Master"
         name="Friendly Explorer"
         canrecruit=yes
@@ -2073,11 +2074,10 @@ Result:
     [event]
         name=prestart
         [unit]
-            type=Dark Adept
-            side,x,y=1,30,15
+            type=Saurian Soothsayer
+            side,x,y=3,30,15
             id=assert
-            name="Warlord attacker"
-            description="The last of a long line of people who use magic to attack orcish warlords and cause assertion failures."
+            name="Neutral healer guy"
         [/unit]
     [/event]
 [/test]
