@@ -25,6 +25,7 @@ Version 1.7.3+svn:
    * Support for [show_if] inside [message]	
    * Added ability to change the share_maps team attribute using [modify_side]
      tag. Be sure to use shroud=yes for that side
+   * [side] team_name is now a comma-separated list of teams the side is on
  * Miscellaneous and bugfixes:
    * Removed obsolete code for implicit linked widgets for the listbox
    * [part] caption= is no longer supported; prepend the CAPTION macro
